Slightly modify spacing to render CV on Ipad Pro correctly

--- a/src/assets/styles/_timeline.scss
+++ b/src/assets/styles/_timeline.scss
@@ -472,7 +472,7 @@ $dark-blue: rgb(48, 68, 107);
 }
 
 #education-container {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -507,14 +507,14 @@ $dark-blue: rgb(48, 68, 107);
         }
     
         .title {
-            font-weight: bold;
-            width: 240px;
+            font-weight: 800;
+            width: 262px;
             float: left;
             font-size: 16px;
         }
     
         .time-period {
-            width: 160px;
+            width: 138px;
             float: right;
             color: grey;
             text-align: right;
